--- a/frontend_index/index.html
+++ b/frontend_index/index.html
@@ -4,80 +4,150 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz App</title>
-  <style>
-    /* CSS code here */
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  <header>
-    <h1>Quiz App</h1>
+<body class="font-sans bg-gray-100 text-gray-800">
+
+  <header class="bg-blue-500 text-white py-4 text-center">
+    <h1 class="text-2xl font-bold">Quiz App</h1>
   </header>
 
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About Us</a>
-    <a href="#contact">Contact</a>
-    <a href="#quiz">Quiz</a>
+  <nav class="bg-gray-800 text-white">
+    <a href="#home" class="block py-2 px-4 hover:bg-gray-700">Home</a>
+    <a href="#about" class="block py-2 px-4 hover:bg-gray-700">About Us</a>
+    <a href="#contact" class="block py-2 px-4 hover:bg-gray-700">Contact</a>
+    <a href="#quiz" class="block py-2 px-4 hover:bg-gray-700">Quiz</a>
   </nav>
 
-  <section id="home">
-    <!-- Form for user registration -->
-    <form id="registerForm">
-      <label for="username">Username:</label>
-      <input type="text" id="username" required />
-      <label for="password">Password:</label>
-      <input type="password" id="password" required />
-      <button type="button" onclick="register()">Register</button>
+  <section id="home" class="bg-white border rounded-md p-4 shadow-md my-4 mx-2">
+
+    <!-- Form for creating questions -->
+    <form id="questionForm" class="flex flex-col items-center mb-4">
+      <label for="questionId" class="mb-2 text-blue-500">Question ID:</label>
+      <input type="number" id="questionId" class="p-2 mb-4 w-64 border rounded-md" required />
+
+      <label for="questionName" class="mb-2 text-blue-500">Question:</label>
+      <input type="text" id="questionName" class="p-2 mb-4 w-64 border rounded-md" required />
+
+      <label for="options" class="mb-2 text-blue-500">Options:</label>
+      <input type="text" id="options" class="p-2 mb-4 w-64 border rounded-md" required />
+
+      <label for="answer" class="mb-2 text-blue-500">Answer:</label>
+      <input type="text" id="answer" class="p-2 mb-4 w-64 border rounded-md" required />
+
+      <!-- Button to trigger the createQuestion function -->
+      <button type="button" onclick="createQuestion()" class="bg-blue-500 text-white py-2 px-4 rounded-md cursor-pointer hover:bg-blue-700">
+        Create Question
+      </button>
     </form>
 
-    <!-- Form for user login -->
-    <form id="loginForm">
-      <label for="loginUsername">Username:</label>
-      <input type="text" id="loginUsername" required />
-      <label for="loginPassword">Password:</label>
-      <input type="password" id="loginPassword" required />
-      <button type="button" onclick="login()">Login</button>
-    </form>
+    <!-- List to display questions -->
+    <ul id="questionList" class="list-none"></ul>
   </section>
 
   <!-- About Us Section -->
-  <section id="about">
-    <h2>About Us</h2>
+  <section id="about" class="bg-white border rounded-md p-4 shadow-md my-4 mx-2">
+    <h2 class="text-2xl text-blue-500 mb-4">About Us</h2>
     <p>Welcome to Quiz App, powered by Startright - Your AI full-stack website code generation tool.</p>
     <p>Startright simplifies the process of building robust web applications. With just one instance, we generate a full-stack boilerplate tailored to your needs.</p>
     <p>Explore the power of AI-driven development and streamline your projects with Startright.</p>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact Us</h2>
+  <section id="contact" class="bg-white border rounded-md p-4 shadow-md my-4 mx-2">
+    <h2 class="text-2xl text-blue-500 mb-4">Contact Us</h2>
     <p>If you have any questions or feedback, feel free to reach out to us.</p>
     <p>Email: info@startright.com</p>
     <p>Phone: +1 (123) 456-7890</p>
   </section>
 
-  <!-- Quiz Section -->
-  <section id="quiz">
-    <!-- Form for creating questions -->
-    <form id="questionForm">
-      <label for="questionId">Question ID:</label>
-      <input type="number" id="questionId" required />
-      <label for="question">Question:</label>
-      <input type="text" id="question" required />
-      <label for="options">Options:</label>
-      <input type="text" id="options" required />
-      <label for="answer">Answer:</label>
-      <input type="text" id="answer" required />
-      <button type="button" onclick="createQuestion()">Create Question</button>
-    </form>
-
-    <!-- List to display questions -->
-    <ul id="questionList"></ul>
-  </section>
-
   <!-- JavaScript code to interact with the backend -->
   <script>
-    // JavaScript code here
+    // Event listener for when the page is loaded
+    document.addEventListener("DOMContentLoaded", function () {
+      // Load questions when the page is loaded
+      loadQuestions();
+    });
+
+    // Function to fetch and display questions from the backend
+    async function loadQuestions() {
+      try {
+        const response = await fetch("/api/v1/questions");
+        const questions = await response.json();
+
+        const questionList = document.getElementById("questionList");
+        questionList.innerHTML = "";
+
+        // Loop through questions and create list items
+        questions.forEach((question) => {
+          const li = document.createElement("li");
+          li.innerHTML = `<span class="font-bold">ID: ${question.id}, Question: ${question.question}, Options: ${question.options}, Answer: ${question.answer}</span> <button onclick="deleteQuestion(${question.id})" class="bg-red-500 text-white py-1 px-2 rounded-md cursor-pointer hover:bg-red-700">Delete</button>`;
+          questionList.appendChild(li);
+        });
+      } catch (error) {
+        // Handle errors if any occur during fetching
+        console.error("Error fetching questions:", error);
+      }
+    }
+
+    // Function to create a new question
+    async function createQuestion() {
+      const questionId = document.getElementById("questionId").value;
+      const questionName = document.getElementById("questionName").value;
+      const options = document.getElementById("options").value.split(",");
+      const answer = document.getElementById("answer").value;
+
+      try {
+        const response = await fetch("/api/v1/questions", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            Accept: "application/json", // Include Accept header for CORS
+          },
+          body: JSON.stringify({
+            id: parseInt(questionId),
+            question: questionName,
+            options: options,
+            answer: answer,
+          }),
+        });
+
+        if (response.ok) {
+          // Reload questions and reset input values if successful
+          loadQuestions();
+          document.getElementById("questionId").value = "";
+          document.getElementById("questionName").value = "";
+          document.getElementById("options").value = "";
+          document.getElementById("answer").value = "";
+        } else {
+          // Handle errors if question creation fails
+          console.error("Failed to create question:", response.statusText);
+        }
+      } catch (error) {
+        // Handle errors if any occur during question creation
+        console.error("Error creating question:", error);
+      }
+    }
+
+    // Function to delete a question
+    async function deleteQuestion(questionId) {
+      try {
+        const response = await fetch(`/api/v1/questions/${questionId}`, {
+          method: "DELETE",
+        });
+
+        if (response.ok) {
+          // Reload questions if deletion is successful
+          loadQuestions();
+        } else {
+          // Handle errors if question deletion fails
+          console.error("Failed to delete question:", response.statusText);
+        }
+      } catch (error) {
+        // Handle errors if any occur during question deletion
+        console.error("Error deleting question:", error);
+      }
+    }
   </script>
 </body>
 </html>
