--- a/frontend_index/index.html
+++ b/frontend_index/index.html
@@ -1,51 +1,52 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meeting Manager</title>
+  <title>Train Station Management</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="font-sans bg-gray-100 text-gray-800">
 
   <header class="bg-blue-500 text-white py-4 text-center">
-    <h1 class="text-2xl font-bold">Meeting Manager</h1>
+    <h1 class="text-2xl font-bold">Train Station Management</h1>
   </header>
 
   <nav class="bg-gray-800 text-white">
     <a href="#home" class="block py-2 px-4 hover:bg-gray-700">Home</a>
     <a href="#about" class="block py-2 px-4 hover:bg-gray-700">About Us</a>
     <a href="#contact" class="block py-2 px-4 hover:bg-gray-700">Contact</a>
-    <a href="#meetings" class="block py-2 px-4 hover:bg-gray-700">Meetings</a>
+    <a href="#stations" class="block py-2 px-4 hover:bg-gray-700">Stations</a>
   </nav>
 
   <section id="home" class="bg-white border rounded-md p-4 shadow-md my-4 mx-2">
 
-    <!-- Form for creating meetings -->
-    <form id="meetingForm" class="flex flex-col items-center mb-4">
-      <label for="meetingId" class="mb-2 text-blue-500">Meeting ID:</label>
-      <input type="number" id="meetingId" class="p-2 mb-4 w-64 border rounded-md" required />
+    <!-- Form for creating stations -->
+    <form id="stationForm" class="flex flex-col items-center mb-4">
+      <label for="stationId" class="mb-2 text-blue-500">Station ID:</label>
+      <input type="number" id="stationId" class="p-2 mb-4 w-64 border rounded-md" required />
 
-      <label for="meetingName" class="mb-2 text-blue-500">Meeting Name:</label>
-      <input type="text" id="meetingName" class="p-2 mb-4 w-64 border rounded-md" required />
+      <label for="stationName" class="mb-2 text-blue-500">Station Name:</label>
+      <input type="text" id="stationName" class="p-2 mb-4 w-64 border rounded-md" required />
 
-      <label for="completed" class="mb-2 text-blue-500">Completed:</label>
-      <input type="checkbox" id="completed" class="p-2 mb-4 w-64 border rounded-md" required />
+      <label for="trains" class="mb-2 text-blue-500">Trains:</label>
+      <input type="text" id="trains" class="p-2 mb-4 w-64 border rounded-md" required />
 
-      <!-- Button to trigger the createMeeting function -->
-      <button type="button" onclick="createMeeting()" class="bg-blue-500 text-white py-2 px-4 rounded-md cursor-pointer hover:bg-blue-700">
-        Create Meeting
+      <!-- Button to trigger the createStation function -->
+      <button type="button" onclick="createStation()" class="bg-blue-500 text-white py-2 px-4 rounded-md cursor-pointer hover:bg-blue-700">
+        Create Station
       </button>
     </form>
 
-    <!-- List to display meetings -->
-    <ul id="meetingList" class="list-none"></ul>
+    <!-- List to display stations -->
+    <ul id="stationList" class="list-none"></ul>
   </section>
 
   <!-- About Us Section -->
   <section id="about" class="bg-white border rounded-md p-4 shadow-md my-4 mx-2">
     <h2 class="text-2xl text-blue-500 mb-4">About Us</h2>
-    <p>Welcome to Meeting Manager, powered by Startright - Your AI full-stack website code generation tool.</p>
+    <p>Welcome to Train Station Management, powered by Startright - Your AI full-stack website code generation tool.</p>
     <p>Startright simplifies the process of building robust web applications. With just one instance, we generate a full-stack boilerplate tailored to your needs.</p>
     <p>Explore the power of AI-driven development and streamline your projects with Startright.</p>
   </section>
@@ -62,86 +63,87 @@
   <script>
     // Event listener for when the page is loaded
     document.addEventListener("DOMContentLoaded", function () {
-      // Load meetings when the page is loaded
-      loadMeetings();
+      // Load stations when the page is loaded
+      loadStations();
     });
 
-    // Function to fetch and display meetings from the backend
-    async function loadMeetings() {
+    // Function to fetch and display stations from the backend
+    async function loadStations() {
       try {
-        const response = await fetch("/api/v1/meetings");
-        const meetings = await response.json();
+        const response = await fetch("/api/v1/stations");
+        const stations = await response.json();
 
-        const meetingList = document.getElementById("meetingList");
-        meetingList.innerHTML = "";
+        const stationList = document.getElementById("stationList");
+        stationList.innerHTML = "";
 
-        // Loop through meetings and create list items
-        meetings.forEach((meeting) => {
+        // Loop through stations and create list items
+        stations.forEach((station) => {
           const li = document.createElement("li");
-          li.innerHTML = `<span class="font-bold">ID: ${meeting.id}, Meeting Name: ${meeting.name}, Completed: ${meeting.completed}</span> <button onclick="deleteMeeting(${meeting.id})" class="bg-red-500 text-white py-1 px-2 rounded-md cursor-pointer hover:bg-red-700">Delete</button>`;
-          meetingList.appendChild(li);
+          li.innerHTML = `<span class="font-bold">ID: ${station.id}, Station Name: ${station.name}, Trains: ${JSON.stringify(station.trains)}</span> <button onclick="deleteStation(${station.id})" class="bg-red-500 text-white py-1 px-2 rounded-md cursor-pointer hover:bg-red-700">Delete</button>`;
+          stationList.appendChild(li);
         });
       } catch (error) {
         // Handle errors if any occur during fetching
-        console.error("Error fetching meetings:", error);
+        console.error("Error fetching stations:", error);
       }
     }
 
-    // Function to create a new meeting
-    async function createMeeting() {
-      const meetingId = document.getElementById("meetingId").value;
-      const meetingName = document.getElementById("meetingName").value;
-      const completed = document.getElementById("completed").checked;
+    // Function to create a new station
+    async function createStation() {
+      const stationId = document.getElementById("stationId").value;
+      const stationName = document.getElementById("stationName").value;
+      const trains = JSON.parse(document.getElementById("trains").value);
 
       try {
-        const response = await fetch("/api/v1/meetings", {
+        const response = await fetch("/api/v1/stations", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
             Accept: "application/json", // Include Accept header for CORS
           },
           body: JSON.stringify({
-            id: parseInt(meetingId),
-            name: meetingName,
-            completed: completed,
+            id: parseInt(stationId),
+            name: stationName,
+            trains: trains,
           }),
         });
 
         if (response.ok) {
-          // Reload meetings and reset input values if successful
-          loadMeetings();
-          document.getElementById("meetingId").value = "";
-          document.getElementById("meetingName").value = "";
-          document.getElementById("completed").checked = false;
+          // Reload stations and reset input values if successful
+          loadStations();
+          document.getElementById("stationId").value = "";
+          document.getElementById("stationName").value = "";
+          document.getElementById("trains").value = "";
         } else {
-          // Handle errors if meeting creation fails
-          console.error("Failed to create meeting:", response.statusText);
+          // Handle errors if station creation fails
+          console.error("Failed to create station:", response.statusText);
         }
       } catch (error) {
-        // Handle errors if any occur during meeting creation
-        console.error("Error creating meeting:", error);
+        // Handle errors if any occur during station creation
+        console.error("Error creating station:", error);
       }
     }
 
-    // Function to delete a meeting
-    async function deleteMeeting(meetingId) {
+    // Function to delete a station
+    async function deleteStation(stationId) {
       try {
-        const response = await fetch(`/api/v1/meetings/${meetingId}`, {
+        const response = await fetch(`/api/v1/stations/${stationId}`, {
           method: "DELETE",
         });
 
         if (response.ok) {
-          // Reload meetings if deletion is successful
-          loadMeetings();
+          // Reload stations if deletion is successful
+          loadStations();
         } else {
-          // Handle errors if meeting deletion fails
-          console.error("Failed to delete meeting:", response.statusText);
+          // Handle errors if station deletion fails
+          console.error("Failed to delete station:", response.statusText);
         }
       } catch (error) {
-        // Handle errors if any occur during meeting deletion
-        console.error("Error deleting meeting:", error);
+        // Handle errors if any occur during station deletion
+        console.error("Error deleting station:", error);
       }
     }
   </script>
 </body>
 </html>
+```
